# AnimationMotionRevolution

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DynamicMotionReplacer.vcxproj  DynamicMotionReplacer.vcxproj.filters  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
include/: AnimMotionData.h  AnimMotionHandler.h  AutoTrampoline.h  Hook.h  Hooks.h  INISettingCollection.h  Logger.h  Motion.h  MotionDataContainer.h  Offsets.h  Plugin.h  Setting.h  Settings.h  half.h  pch.h
include/RE/: RTTI.h
include/RE/B/: bhkCharacterController.h  bhkCharacterMoveInfo.h  bhkCharacterState.h  bhkCharacterStateClimbing.h  bhkCharacterStateFlying.h  bhkCharacterStateInAir.h  bhkCharacterStateJumping.h  bhkCharacterStateOnGround.h  bhkCharacterStateSwimming.h  bhkWorld.h
include/RE/H/: hkClass.h  hkVector4.h  hkaAnimation.h  hkaAnimationBinding.h  hkaAnimationControl.h  hkaAnnotationTrack.h  hkaDefaultAnimationControl.h  hkaSplineCompressedAnimation.h  hkbClipGenerator.h  hkbContext.h  hkpCharacterMovementUtil.h
include/RE/M/: MotionDataContainer.h
include/utils/: INISettingCollection.h  Logger.h  Setting.h  Trampoline.h  half.h
source/: Hooks.cpp  INISettingCollection.cpp  Logger.cpp  Settings.cpp  main.cpp
source/utils/: INISettingCollection.cpp
